find image from  url

--- a/Feedaggregator/WindowsFormsApplication1/App.config
+++ b/Feedaggregator/WindowsFormsApplication1/App.config
@@ -3,19 +3,13 @@
   <configSections>
   </configSections>
   <appSettings>
-    <add key="SearchIndexFolderPath" value="c:\Parth\SearchIndex"/>
+    <add key="SearchIndexFolderPath" value="c:\Parth\SearchIndex" />
     
   </appSettings>
     <connectionStrings>
-        <add name="WindowsFormsApplication1.Properties.Settings.BollywoodGossipConnectionString"
-            connectionString="Data Source=MPATEL-Pc\SQLEXPRESS;Initial Catalog=BollywoodGossip;Persist Security Info=True;User ID=BGUser;Password=BGUser"
-            providerName="System.Data.SqlClient" />
-        <add name="WindowsFormsApplication1.Properties.Settings.BollywoodGossipConnectionString1"
-            connectionString="Data Source=MPATEL-PC\SQLEXPRESS;Initial Catalog=BollywoodGossip;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-        <add name="WindowsFormsApplication1.Properties.Settings.BollywoodGossipConnectionString2"
-            connectionString="Data Source=MINAL-PC;Initial Catalog=BollywoodGossip;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+        <add name="WindowsFormsApplication1.Properties.Settings.BollywoodGossipConnectionString" connectionString="Data Source=MPATEL-Pc\SQLEXPRESS;Initial Catalog=BollywoodGossip;Persist Security Info=True;User ID=BGUser;Password=BGUser" providerName="System.Data.SqlClient" />
+        <add name="WindowsFormsApplication1.Properties.Settings.BollywoodGossipConnectionString1" connectionString="Data Source=MPATEL-PC\SQLEXPRESS;Initial Catalog=BollywoodGossip;Integrated Security=True" providerName="System.Data.SqlClient" />
+        <add name="WindowsFormsApplication1.Properties.Settings.BollywoodGossipConnectionString2" connectionString="Data Source=MINAL-PC;Initial Catalog=BollywoodGossip;Integrated Security=True" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
