--- a/Feedaggregator/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/Feedaggregator/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -37,6 +37,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Html2Xhtml">
+      <HintPath>..\packages\Html2Xhtml.1.1.2.4\lib\net40\Html2Xhtml.dll</HintPath>
+    </Reference>
+    <Reference Include="HtmlAgilityPack">
+      <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net40\HtmlAgilityPack.dll</HintPath>
+    </Reference>
     <Reference Include="ICSharpCode.SharpZipLib">
       <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
@@ -116,9 +122,19 @@
     <Compile Include="TimeZone.Designer.cs">
       <DependentUpon>TimeZone.cs</DependentUpon>
     </Compile>
+    <Compile Include="WebCrowler.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WebCrowler.Designer.cs">
+      <DependentUpon>WebCrowler.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="TimeZone.resx">
       <DependentUpon>TimeZone.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="WebCrowler.resx">
+      <DependentUpon>WebCrowler.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="changes.rtf" />
     <None Include="DB.dbml.layout">
       <DependentUpon>DB.dbml</DependentUpon>
     </None>
@@ -146,6 +162,7 @@
       <LastGenOutput>DB.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
+    <None Include="gpl-2.0.rtf" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -165,6 +182,9 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="neat.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
