--- a/Feedaggregator/WindowsFormsApplication1/packages.config
+++ b/Feedaggregator/WindowsFormsApplication1/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Html2Xhtml" version="1.1.2.4" targetFramework="net40" />
+  <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net40" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net40" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
