--- a/Feedaggregator/packages/repositories.config
+++ b/Feedaggregator/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\Feedaggregator\packages.config" />
   <repository path="..\NotificationCenter\packages.config" />
+  <repository path="..\WindowsFormsApplication1\packages.config" />
 </repositories>
