--- a/Feedaggregator/packages/repositories.config
+++ b/Feedaggregator/packages/repositories.config
@@ -4,6 +4,7 @@
   <repository path="..\DBArchival\DBArchival.iOS\packages.config" />
   <repository path="..\DBArchival\DBArchival.WinPhone\packages.config" />
   <repository path="..\DBArchival\DBArchival\packages.config" />
+  <repository path="..\DBArchival\packages.config" />
   <repository path="..\Feedaggregator\packages.config" />
   <repository path="..\NotificationCenter\packages.config" />
   <repository path="..\WindowsFormsApplication1\packages.config" />
