--- a/Feedaggregator/DBArchival/App.config
+++ b/Feedaggregator/DBArchival/App.config
@@ -6,4 +6,7 @@
   <connectionStrings>
     <add name="AuditDBConnection" connectionString="data source=MINAL-PC;initial catalog=BollyWoodGossipAudit;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
   </connectionStrings>
+  <appSettings>
+    <add key="SearchIndexDirectoryPath" value="C:\Parth\SearchIndex" />
+  </appSettings>
 </configuration>
