--- a/Feedaggregator/NotificationCenter/app.config
+++ b/Feedaggregator/NotificationCenter/app.config
@@ -4,7 +4,7 @@
     <add key="GoogleAPIKey" value="AIzaSyCFtFA6xibK9Ol1SDRimfK8kSofVqZSh3A"/>
   </appSettings>
   <connectionStrings>
-    <add name="BollyWoodGossipCon" connectionString="data source=MPATEL-PC\SQLEXPRESS;initial catalog=BollywoodGossip;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
+    <add name="BollyWoodGossipCon" connectionString="data source=MPATEL-PC\SQLEXPRESS;initial catalog=BollywoodGossip;Integrated Security=SSPI;Connection Timeout=300" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 <startup>
   <!--<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>-->
