--- a/Feedaggregator/DBArchival/App.config
+++ b/Feedaggregator/DBArchival/App.config
@@ -4,7 +4,7 @@
         <!--<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />-->
     </startup>
   <connectionStrings>
-    <add name="AuditDBConnection" connectionString="data source=MINAL-PC;initial catalog=BollyWoodGossipAudit;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
+    <add name="AuditDBConnection" connectionString="data source=MINAL-PC;initial catalog=BollyWoodGossipAudit;Integrated Security=SSPI;Connection Timeout=300" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="SearchIndexDirectoryPath" value="C:\Parth\SearchIndex" />
