--- a/Feedaggregator/DBArchival/DBArchival.csproj
+++ b/Feedaggregator/DBArchival/DBArchival.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ProdConfigCopy\DBArchival.exe.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
