--- a/Feedaggregator/Feedaggregator/app.config
+++ b/Feedaggregator/Feedaggregator/app.config
@@ -4,8 +4,8 @@
   <!--<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>-->
 </startup>
   <connectionStrings>
-    <add name="BollyWoodGossipCon" connectionString="data source=MINAL-PC;initial catalog=BollyWoodGossip;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
-    <add name="ErrorLogCon" connectionString="data source=MINAL-PC;initial catalog=BollyWoodGossip;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
+    <add name="BollyWoodGossipCon" connectionString="data source=MINAL-PC;initial catalog=BollyWoodGossip;Integrated Security=SSPI;Connection Timeout=300" providerName="System.Data.SqlClient"/>
+    <add name="ErrorLogCon" connectionString="data source=MINAL-PC;initial catalog=BollyWoodGossip;Integrated Security=SSPI;Connection Timeout=300" providerName="System.Data.SqlClient"/>
     <!--<add name="BollyWoodGossipCon" connectionString="data source=MINAL-PC;initial catalog=BusinessNews;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>-->
     <!--<add name="ErrorLogCon" connectionString="data source=MINAL-PC;initial catalog=BusinessNews;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>-->
     <!--<add name="BollyWoodGossipCon" connectionString="data source=MPATEL-PC\SQLEXPRESS;initial catalog=GujNews;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>-->
